Selecting eccentricity based on mode rather than median, in catalog scraper.

--- a/Notebook_Tables.ipynb
+++ b/Notebook_Tables.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,75 +47,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Replace NaNs with dummy values, for now."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "stellar = stellar.fillna(100.5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0      0.949184\n",
-       "1      0.832347\n",
-       "2      1.124544\n",
-       "3      0.734182\n",
-       "4      4.723592\n",
-       "         ...   \n",
-       "716    0.567991\n",
-       "717    0.568667\n",
-       "718    0.574882\n",
-       "719    0.520826\n",
-       "720    0.644841\n",
-       "Name: iso_radius, Length: 721, dtype: float64"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "stellar.iso_radius"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Make table for planet parameters."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "masses_real = masses_only.query('status != \"N\" and status != \"A\"').reset_index(drop=True)\n",
-    "masses_good = masses_real.query('mass != \"nan\"').reset_index(drop=True)#[masses_only.hostname != 'hip63510']\n",
-    "masses_binary = masses_good.query('status == \"S\" or status == \"SS\"').reset_index(drop=True)\n",
-    "masses_planet = masses_good.query('status != \"S\" and status != \"SS\"').reset_index(drop=True)\n",
-    "masses_old  = masses_planet.query('status == \"K\"').reset_index(drop=True)\n",
-    "masses_new  = masses_planet.query('status == \"C\" or status == \"J\"').reset_index(drop=True)"
+    "masses_real    = masses_only.query('status != \"N\" and status != \"A\"').reset_index(drop=True)\n",
+    "masses_good    = masses_real.query('mass != \"nan\"').reset_index(drop=True)#[masses_only.hostname != 'hip63510']\n",
+    "masses_binary  = masses_good.query('status == \"S\" or status == \"SS\"').reset_index(drop=True)\n",
+    "masses_planet  = masses_good.query('status != \"S\" and status != \"SS\"').reset_index(drop=True)\n",
+    "masses_old     = masses_planet.query('status == \"K\"').reset_index(drop=True)\n",
+    "masses_new     = masses_planet.query('status == \"C\" or status == \"J\"').reset_index(drop=True)\n",
+    "false_positive = masses_only.query('status == \"N\" or status == \"A\"')#[['hostname', 'k', 'per', 'status']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,21 +226,21 @@
     "masses_planet['w_med_r']          = round_to_ref_vec(np.array(masses_planet['w_med']), masses_planet['w_err_av'])\n",
     "'''\n",
     "tex_writer = open('legacy_tables/tex_tables/planet_table.tex', 'w')\n",
-    "tex_writer.write(r'\\begin{longtable*}{lrrrr}')\n",
+    "tex_writer.write(r'\\begin{longtable*}{llrrrr}')\n",
     "tex_writer.write('\\n')\n",
     "tex_writer.write(r'\\caption{Planet Catalog}' + r' \\\\')\n",
     "tex_writer.write('\\n')\n",
     "tex_writer.write(r'\\toprule' + ' \\n')\n",
     "tex_writer.write(r'\\midrule' + ' \\n')\n",
     "tex_writer.write('\\n')\n",
-    "tex_writer.write(r'Name & \\msini\\ [\\mjup] & a [AU] & $P$ [d] & $e$ \\\\' + ' \\n')\n",
+    "tex_writer.write(r'CPS Name & Lit. Name & \\msini\\ [\\mjup] & a [AU] & $P$ [d] & $e$ \\\\' + ' \\n')\n",
     "tex_writer.write(r'\\toprule' + ' \\n')\n",
     "tex_writer.write(r'\\endfirsthead' + ' \\n')\n",
     "tex_writer.write(r'\\caption[]{Planet Catalog (Continued)}' + r' \\\\')\n",
     "tex_writer.write('\\n')\n",
     "tex_writer.write(r'\\toprule' + ' \\n')\n",
     "tex_writer.write(r'\\midrule' + ' \\n')\n",
-    "tex_writer.write(r'Name & \\msini\\ [\\mjup] & a [AU] & $P$ [d] & $e$ \\\\' + ' \\n')\n",
+    "tex_writer.write(r'CPS Name & Lit. Name & \\msini\\ [\\mjup] & a [AU] & $P$ [d] & $e$ \\\\' + ' \\n')\n",
     "tex_writer.write(r'\\toprule' + ' \\n')\n",
     "tex_writer.write(r'\\endhead' + ' \\n')\n",
     "\n",
@@ -312,6 +264,11 @@
     "        mass_plus_str += '0'\n",
     "    elif len(mass_plus_str) > len(mass_minus_str) and (mass_plus_str[:2] == '0.' or mass_minus_str[:2] == '0.'):\n",
     "        mass_minus_str += '0'    \n",
+    "    \n",
+    "    if mass_str[-2:] == '.0' and mass_plus_str[-2:] == '.0' and mass_minus_str[-2:] == '.0':\n",
+    "        mass_str = mass_str[-2:]\n",
+    "        mass_plus_str = mass_plus_str[-2:]\n",
+    "        mass_minus_str = mass_minus_str[-2:]\n",
     "        \n",
     "    axis_str = str(row['axis_med_r'])\n",
     "    axis_plus_str  = str(row['axis_err_plus_r'])\n",
@@ -321,6 +278,11 @@
     "    elif len(axis_plus_str) > len(axis_minus_str) and (axis_plus_str[:2] == '0.' or axis_minus_str[:2] == '0.'):\n",
     "        axis_minus_str += '0' \n",
     "        \n",
+    "    if axis_str[-2:] == '.0' and axis_plus_str[-2:] == '.0' and axis_minus_str[-2:] == '.0':\n",
+    "        axis_str = axis_str[-2:]\n",
+    "        axis_plus_str = axis_plus_str[-2:]\n",
+    "        axis_minus_str = axis_minus_str[-2:]\n",
+    "        \n",
     "    per_str = str(row['per_med_r'])\n",
     "    per_plus_str  = str(row['per_err_plus_r'])\n",
     "    per_minus_str = str(row['per_err_minus_r'])\n",
@@ -329,13 +291,18 @@
     "    elif len(per_plus_str) > len(per_minus_str) and (per_plus_str[:2] == '0.' or per_minus_str[:2] == '0.'):\n",
     "        per_minus_str += '0' \n",
     "        \n",
+    "    if per_str[-2:] == '.0' and per_plus_str[-2:] == '.0' and per_minus_str[-2:] == '.0':\n",
+    "        per_str = per_str[-2:]\n",
+    "        per_plus_str = per_plus_str[-2:]\n",
+    "        per_minus_str = per_minus_str[-2:]\n",
+    "        \n",
     "    ecc_str = str(row['e_med_r'])\n",
     "    ecc_plus_str  = str(row['e_err_plus_r'])\n",
     "    ecc_minus_str = str(row['e_err_minus_r'])\n",
     "    if len(ecc_plus_str) < len(ecc_minus_str) and (ecc_plus_str[:2] == '0.' or ecc_minus_str[:2] == '0.'):\n",
     "        ecc_plus_str += '0'\n",
     "    elif len(ecc_plus_str) > len(ecc_minus_str) and (ecc_plus_str[:2] == '0.' or ecc_minus_str[:2] == '0.'):\n",
-    "        ecc_minus_str += '0' \n",
+    "        ecc_minus_str += '0'\n",
     "        \n",
     "    massin = r'$' + '{0}^{{+{1}}}_{{-{2}}}'.format(mass_str, mass_plus_str, mass_minus_str) + r'$'    \n",
     "    axisin = r'$' + '{0}^{{+{1}}}_{{-{2}}}'.format(axis_str, axis_plus_str, axis_minus_str) + r'$'    \n",
@@ -351,8 +318,8 @@
     "                                                row['w_err_minus_r']) + r'$'\n",
     "    '''\n",
     "    \n",
-    "    tex_writer.write('{0} & {1} & {2} & {3} & {4} \\\\\\\\ \\n'.format(\n",
-    "                     namein, massin, axisin, periin, eccein))\n",
+    "    tex_writer.write('{0} & {1} & {2} & {3} & {4} & {5} \\\\\\\\ \\n'.format(\n",
+    "                     namein, namein, massin, axisin, periin, eccein))\n",
     "    \n",
     "tex_writer.write(r'\\bottomrule' + ' \\n')\n",
     "tex_writer.write(r'\\end{longtable*}' + ' \\n')\n",
@@ -364,13 +331,6 @@
    "metadata": {},
    "source": [
     "# Make table for stellar parameters. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## TO-DO: DESIGNATE WHETHER PARAMETERS ARE EMPIRICAL OR SYNTHETIC."
    ]
   },
   {
@@ -446,24 +406,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Make new candidate table. Preliminary as of 11/23/19."
+    "## Make new candidate table."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "masses_candidate = masses_planet.query('status == \"C\" or status == \"J\"').reset_index(drop=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "masses_candidate = masses_planet.query('status == \"C\" or status == \"J\"').reset_index(drop=True)\n",
+    "\n",
     "# Round errors and parameters with significant figures.\n",
     "masses_candidate['mass_err_plus_r']  = round_sig_vec(np.array(masses_candidate['mass_plus'] - masses_candidate['mass_med']))\n",
     "masses_candidate['mass_err_minus_r'] = round_sig_vec(np.array(masses_candidate['mass_med'] - masses_candidate['mass_minus']))\n",
@@ -496,14 +449,14 @@
     "masses_candidate['w_med_r']          = round_to_ref_vec(np.array(masses_candidate['w_med']), masses_candidate['w_err_av'])\n",
     "'''\n",
     "tex_writer = open('legacy_tables/tex_tables/candidate_table.tex', 'w')\n",
-    "tex_writer.write(r'\\begin{longtable*}{lrrrr}')\n",
+    "tex_writer.write(r'\\begin{longtable*}{llrrrr}')\n",
     "tex_writer.write('\\n')\n",
     "tex_writer.write(r'\\caption{Newly Discovered Planets and Substellar Companions}' + r' \\\\')\n",
     "tex_writer.write('\\n')\n",
     "tex_writer.write(r'\\toprule' + ' \\n')\n",
     "tex_writer.write(r'\\midrule' + ' \\n')\n",
     "tex_writer.write('\\n')\n",
-    "tex_writer.write(r'Name & \\msini\\ [\\mjup] & a [AU] & $P$ [d] & $e$ \\\\' + ' \\n')\n",
+    "tex_writer.write(r'CPS Name & Lit. Name & \\msini\\ [\\mjup] & a [AU] & $P$ [d] & $e$ \\\\' + ' \\n')\n",
     "tex_writer.write(r'\\toprule' + ' \\n')\n",
     "\n",
     "for index, row in masses_candidate.iterrows():\n",
@@ -526,6 +479,11 @@
     "        mass_plus_str += '0'\n",
     "    elif len(mass_plus_str) > len(mass_minus_str) and (mass_plus_str[:2] == '0.' or mass_minus_str[:2] == '0.'):\n",
     "        mass_minus_str += '0'    \n",
+    "    \n",
+    "    if mass_str[-2:] == '.0' and mass_plus_str[-2:] == '.0' and mass_minus_str[-2:] == '.0':\n",
+    "        mass_str = mass_str[-2:]\n",
+    "        mass_plus_str = mass_plus_str[-2:]\n",
+    "        mass_minus_str = mass_minus_str[-2:]\n",
     "        \n",
     "    axis_str = str(row['axis_med_r'])\n",
     "    axis_plus_str  = str(row['axis_err_plus_r'])\n",
@@ -535,6 +493,11 @@
     "    elif len(axis_plus_str) > len(axis_minus_str) and (axis_plus_str[:2] == '0.' or axis_minus_str[:2] == '0.'):\n",
     "        axis_minus_str += '0' \n",
     "        \n",
+    "    if axis_str[-2:] == '.0' and axis_plus_str[-2:] == '.0' and axis_minus_str[-2:] == '.0':\n",
+    "        axis_str = axis_str[-2:]\n",
+    "        axis_plus_str = axis_plus_str[-2:]\n",
+    "        axis_minus_str = axis_minus_str[-2:]\n",
+    "        \n",
     "    per_str = str(row['per_med_r'])\n",
     "    per_plus_str  = str(row['per_err_plus_r'])\n",
     "    per_minus_str = str(row['per_err_minus_r'])\n",
@@ -542,6 +505,11 @@
     "        per_plus_str += '0'\n",
     "    elif len(per_plus_str) > len(per_minus_str) and (per_plus_str[:2] == '0.' or per_minus_str[:2] == '0.'):\n",
     "        per_minus_str += '0' \n",
+    "        \n",
+    "    if per_str[-2:] == '.0' and per_plus_str[-2:] == '.0' and per_minus_str[-2:] == '.0':\n",
+    "        per_str = per_str[-2:]\n",
+    "        per_plus_str = per_plus_str[-2:]\n",
+    "        per_minus_str = per_minus_str[-2:]\n",
     "        \n",
     "    ecc_str = str(row['e_med_r'])\n",
     "    ecc_plus_str  = str(row['e_err_plus_r'])\n",
@@ -563,9 +531,93 @@
     "                                                row['w_err_plus_r'], \n",
     "                                                row['w_err_minus_r']) + r'$'\n",
     "    '''\n",
+    "    tex_writer.write('{0} & {1} & {2} & {3} & {4} & {5} \\\\\\\\ \\n'.format(\n",
+    "                     namein, namein, massin, axisin, periin, eccein))    \n",
+    "    #tex_writer.write('{0} & {1} & {2} & {3} & {4} \\\\\\\\ \\n'.format(\n",
+    "    #                 namein, massin, axisin, periin, eccein))\n",
     "    \n",
+    "tex_writer.write(r'\\bottomrule' + ' \\n')\n",
+    "tex_writer.write(r'\\end{longtable*}' + ' \\n')\n",
+    "tex_writer.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Make false-positive table."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "false_positive['per_err_plus_r']   = round_sig_vec(np.array(false_positive['per_plus'] - false_positive['per_med']))\n",
+    "false_positive['per_err_minus_r']  = round_sig_vec(np.array(false_positive['per_med'] - false_positive['per_minus']))\n",
+    "false_positive['per_err_av']       = round_sig_vec(0.5*(false_positive['per_err_plus_r'] + false_positive['per_err_minus_r']))\n",
+    "false_positive['per_med_r']        = round_to_ref_vec(np.array(false_positive['per_med']), false_positive['per_err_av'])\n",
+    "\n",
+    "false_positive['k_err_plus_r']   = round_sig_vec(np.array(false_positive['k_plus'] - false_positive['k_med']))\n",
+    "false_positive['k_err_minus_r']  = round_sig_vec(np.array(false_positive['k_med'] - false_positive['k_minus']))\n",
+    "false_positive['k_err_av']       = round_sig_vec(0.5*(false_positive['k_err_plus_r'] + false_positive['k_err_minus_r']))\n",
+    "false_positive['k_med_r']        = round_to_ref_vec(np.array(false_positive['k_med']), false_positive['k_err_av'])\n",
+    "\n",
+    "false_positive['k_r'] = round_sig_vec(np.array(false_positive['k_med']))\n",
+    "\n",
+    "tex_writer = open('legacy_tables/tex_tables/false_table.tex', 'w')\n",
+    "tex_writer.write(r'\\begin{longtable*}{llrrr}')\n",
+    "tex_writer.write('\\n')\n",
+    "tex_writer.write(r'\\caption{False Positives}' + r' \\\\')\n",
+    "tex_writer.write('\\n')\n",
+    "tex_writer.write(r'\\toprule' + ' \\n')\n",
+    "tex_writer.write(r'\\midrule' + ' \\n')\n",
+    "tex_writer.write('\\n')\n",
+    "tex_writer.write(r'CPS Name & Lit. Name & $P$ [d] & $K$ [m s$^{-1}$] & Cause \\\\' + ' \\n')\n",
+    "tex_writer.write(r'\\endfirsthead' + ' \\n')\n",
+    "tex_writer.write(r'\\caption[]{False Positives (Continued)}' + r' \\\\')\n",
+    "tex_writer.write('\\n')\n",
+    "tex_writer.write(r'\\toprule' + ' \\n')\n",
+    "tex_writer.write(r'\\midrule' + ' \\n')\n",
+    "tex_writer.write(r'CPS Name & Lit. Name & $P$ [d] & $K$ [m s$^{-1}$] & Cause \\\\' + ' \\n')\n",
+    "tex_writer.write(r'\\toprule' + ' \\n')\n",
+    "tex_writer.write(r'\\endhead' + ' \\n')\n",
+    "\n",
+    "for index, row in false_positive.iterrows():\n",
+    "    # Customize names.\n",
+    "    namein = str(row['hostname'])\n",
+    "    if namein[0] == 'h':\n",
+    "        namein = namein[:3].upper() + ' ' + namein[3:]\n",
+    "    elif namein[0] == 'g':\n",
+    "        namein = namein[:2].upper() + ' ' + namein[2:]\n",
+    "    elif namein[0] == 'b':\n",
+    "        namein = namein[:2].upper() + namein[2:]\n",
+    "    else:\n",
+    "        namein = 'HD ' + namein[:]\n",
+    "        \n",
+    "    per_str = str(row['per_med_r'])\n",
+    "    per_plus_str  = str(row['per_err_plus_r'])\n",
+    "    per_minus_str = str(row['per_err_minus_r'])\n",
+    "    if len(per_plus_str) < len(per_minus_str) and (per_plus_str[:2] == '0.' or per_minus_str[:2] == '0.'):\n",
+    "        per_plus_str += '0'\n",
+    "    elif len(per_plus_str) > len(per_minus_str) and (per_plus_str[:2] == '0.' or per_minus_str[:2] == '0.'):\n",
+    "        per_minus_str += '0' \n",
+    "        \n",
+    "    k_str = str(row['k_med_r'])\n",
+    "    k_plus_str  = str(row['k_err_plus_r'])\n",
+    "    k_minus_str = str(row['k_err_minus_r'])\n",
+    "    if len(k_plus_str) < len(k_minus_str) and (k_plus_str[:2] == '0.' or k_minus_str[:2] == '0.'):\n",
+    "        k_plus_str += '0'\n",
+    "    elif len(k_plus_str) > len(k_minus_str) and (k_plus_str[:2] == '0.' or k_minus_str[:2] == '0.'):\n",
+    "        k_minus_str += '0' \n",
+    "\n",
+    "    periin = r'$' + '{0}^{{+{1}}}_{{-{2}}}'.format(per_str, per_plus_str, per_minus_str) + r'$'\n",
+    "    kin = r'$' + '{0}^{{+{1}}}_{{-{2}}}'.format(k_str, k_plus_str, k_minus_str) + r'$'\n",
+    "    reason = str(row['status'])\n",
+    "\n",
     "    tex_writer.write('{0} & {1} & {2} & {3} & {4} \\\\\\\\ \\n'.format(\n",
-    "                     namein, massin, axisin, periin, eccein))\n",
+    "                     namein, namein, periin, kin, reason))    \n",
     "    \n",
     "tex_writer.write(r'\\bottomrule' + ' \\n')\n",
     "tex_writer.write(r'\\end{longtable*}' + ' \\n')\n",
