--- a/legacy_tables/tex_tables/candidate_table.tex
+++ b/legacy_tables/tex_tables/candidate_table.tex
@@ -1,28 +1,29 @@
-\begin{longtable*}{lrrrr}
+\begin{longtable*}{llrrrr}
+\caption{Newly Discovered Planets and Substellar Companions} \\
 \toprule 
 \midrule 
 
-Name & \msini\ [\mjup] & a [AU] & $P$ [d] & $e$ \\ 
+CPS Name & Lit. Name & \msini\ [\mjup] & a [AU] & $P$ [d] & $e$ \\ 
 \toprule 
-HD 145675 c & $6.19^{+0.98}_{-0.85}$ & $17.5^{+5.6}_{-3.5}$ & $27000.0^{+14000.0}_{-7600.0}$ & $0.47^{+0.11}_{-0.10}$ \\ 
-HD 111031 b & $33.0^{+24.0}_{-15.0}$ & $24.7^{+8.9}_{-7.4}$ & $42000.0^{+24000.0}_{-17000.0}$ & $0.33^{+0.14}_{-0.17}$ \\ 
-HD 136925 b & $1.01^{+0.65}_{-0.18}$ & $5.31^{+0.29}_{-0.29}$ & $4800.0^{+380.0}_{-380.0}$ & $0.39^{+0.38}_{-0.30}$ \\ 
-HD 141004 b & $0.0436^{+0.0049}_{-0.0048}$ & $0.1236^{+0.0026}_{-0.0028}$ & $15.5079^{+0.0017}_{-0.0018}$ & $0.17^{+0.11}_{-0.10}$ \\ 
-HD 156668 b & $0.0963^{+0.0087}_{-0.0085}$ & $1.56^{+0.020}_{-0.021}$ & $811.8^{+5.0}_{-4.9}$ & $0.115^{+0.091}_{-0.077}$ \\ 
-HD 164922 d & $0.0337^{+0.0033}_{-0.0033}$ & $0.2294^{+0.0030}_{-0.0031}$ & $41.761^{+0.013}_{-0.012}$ & $0.097^{+0.092}_{-0.068}$ \\ 
-HD 164922 e & $0.0146^{+0.0022}_{-0.0022}$ & $0.1024^{+0.0013}_{-0.0014}$ & $12.4581^{+0.0020}_{-0.0024}$ & $0.18^{+0.19}_{-0.13}$ \\ 
-HD 168009 b & $0.0325^{+0.0037}_{-0.0036}$ & $0.1191^{+0.0021}_{-0.0022}$ & $15.1478^{+0.0028}_{-0.0030}$ & $0.14^{+0.120}_{-0.093}$ \\ 
-HD 190360 d & $0.0289^{+0.0039}_{-0.0039}$ & $0.3932^{+0.0077}_{-0.0080}$ & $88.68^{+0.11}_{-0.11}$ & $0.16^{+0.14}_{-0.11}$ \\ 
-HD 213472 b & $2.93^{+0.44}_{-0.29}$ & $13.8^{+5.6}_{-2.6}$ & $18200.0^{+12000.0}_{-5000.0}$ & $0.566^{+0.110}_{-0.082}$ \\ 
-HD 24040 c & $0.196^{+0.030}_{-0.029}$ & $1.309^{+0.033}_{-0.034}$ & $514.8^{+2.9}_{-3.2}$ & $0.13^{+0.130}_{-0.088}$ \\ 
-HD 26161 b & $4.67^{+1.00}_{-0.63}$ & $14.9^{+4.2}_{-3.2}$ & $20400.0^{+8300.0}_{-6300.0}$ & $0.753^{+0.053}_{-0.044}$ \\ 
-HD 3765 b & $0.175^{+0.02}_{-0.02}$ & $2.123^{+0.036}_{-0.037}$ & $1226.0^{+20.0}_{-23.0}$ & $0.35^{+0.11}_{-0.12}$ \\ 
-HD 52265 c & $0.334^{+0.075}_{-0.053}$ & $2.615^{+0.061}_{-0.062}$ & $1382.0^{+23.0}_{-15.0}$ & $0.57^{+0.11}_{-0.12}$ \\ 
-HD 66428 c & $32.0^{+58.0}_{-23.0}$ & $22.6^{+10.0}_{-8.2}$ & $37000.0^{+28000.0}_{-18000.0}$ & $0.31^{+0.13}_{-0.13}$ \\ 
-HD 86728 b & $0.0311^{+0.0052}_{-0.0053}$ & $0.2004^{+0.0042}_{-0.0044}$ & $31.142^{+0.016}_{-0.017}$ & $0.2^{+0.18}_{-0.13}$ \\ 
-HD 95735 b & $0.078^{+0.012}_{-0.011}$ & $3.39^{+0.16}_{-0.12}$ & $2960.0^{+200.0}_{-150.0}$ & $0.18^{+0.14}_{-0.12}$ \\ 
-HD 97101 b & $0.184^{+0.013}_{-0.012}$ & $1.404^{+0.018}_{-0.018}$ & $742.4^{+3.7}_{-3.3}$ & $0.088^{+0.066}_{-0.058}$ \\ 
-HD 97101 c & $0.0308^{+0.0044}_{-0.0042}$ & $0.2373^{+0.0029}_{-0.0029}$ & $51.598^{+0.039}_{-0.042}$ & $0.24^{+0.15}_{-0.14}$ \\ 
-HIP 109388 c & $1.275^{+0.067}_{-0.067}$ & $5.383^{+0.10}_{-0.096}$ & $5770.0^{+140.0}_{-120.0}$ & $0.101^{+0.044}_{-0.043}$ \\ 
+HD 145675 c & HD 145675 c & $6.19^{+0.98}_{-0.85}$ & $17.5^{+5.6}_{-3.5}$ & $.0^{+.0}_{-.0}$ & $0.47^{+0.11}_{-0.10}$ \\ 
+HD 111031 b & HD 111031 b & $.0^{+.0}_{-.0}$ & $24.7^{+8.9}_{-7.4}$ & $.0^{+.0}_{-.0}$ & $0.33^{+0.14}_{-0.17}$ \\ 
+HD 136925 b & HD 136925 b & $1.01^{+0.65}_{-0.18}$ & $5.31^{+0.29}_{-0.29}$ & $.0^{+.0}_{-.0}$ & $0.39^{+0.38}_{-0.30}$ \\ 
+HD 141004 b & HD 141004 b & $0.0436^{+0.0049}_{-0.0048}$ & $0.1236^{+0.0026}_{-0.0028}$ & $15.5079^{+0.0017}_{-0.0018}$ & $0.17^{+0.11}_{-0.10}$ \\ 
+HD 156668 b & HD 156668 b & $0.0963^{+0.0087}_{-0.0085}$ & $1.56^{+0.020}_{-0.021}$ & $811.8^{+5.0}_{-4.9}$ & $0.115^{+0.091}_{-0.077}$ \\ 
+HD 164922 d & HD 164922 d & $0.0337^{+0.0033}_{-0.0033}$ & $0.2294^{+0.0030}_{-0.0031}$ & $41.761^{+0.013}_{-0.012}$ & $0.097^{+0.092}_{-0.068}$ \\ 
+HD 164922 e & HD 164922 e & $0.0146^{+0.0022}_{-0.0022}$ & $0.1024^{+0.0013}_{-0.0014}$ & $12.4581^{+0.0020}_{-0.0024}$ & $0.18^{+0.19}_{-0.13}$ \\ 
+HD 168009 b & HD 168009 b & $0.0325^{+0.0037}_{-0.0036}$ & $0.1191^{+0.0021}_{-0.0022}$ & $15.1478^{+0.0028}_{-0.0030}$ & $0.14^{+0.120}_{-0.093}$ \\ 
+HD 190360 d & HD 190360 d & $0.0289^{+0.0039}_{-0.0039}$ & $0.3932^{+0.0077}_{-0.0080}$ & $88.68^{+0.11}_{-0.11}$ & $0.16^{+0.14}_{-0.11}$ \\ 
+HD 213472 b & HD 213472 b & $2.93^{+0.44}_{-0.29}$ & $13.8^{+5.6}_{-2.6}$ & $.0^{+.0}_{-.0}$ & $0.566^{+0.110}_{-0.082}$ \\ 
+HD 24040 c & HD 24040 c & $0.196^{+0.030}_{-0.029}$ & $1.309^{+0.033}_{-0.034}$ & $514.8^{+2.9}_{-3.2}$ & $0.13^{+0.130}_{-0.088}$ \\ 
+HD 26161 b & HD 26161 b & $4.67^{+1.00}_{-0.63}$ & $14.9^{+4.2}_{-3.2}$ & $.0^{+.0}_{-.0}$ & $0.753^{+0.053}_{-0.044}$ \\ 
+HD 3765 b & HD 3765 b & $0.175^{+0.02}_{-0.02}$ & $2.123^{+0.036}_{-0.037}$ & $.0^{+.0}_{-.0}$ & $0.35^{+0.11}_{-0.12}$ \\ 
+HD 52265 c & HD 52265 c & $0.334^{+0.075}_{-0.053}$ & $2.615^{+0.061}_{-0.062}$ & $.0^{+.0}_{-.0}$ & $0.57^{+0.11}_{-0.12}$ \\ 
+HD 66428 c & HD 66428 c & $.0^{+.0}_{-.0}$ & $22.6^{+10.0}_{-8.2}$ & $.0^{+.0}_{-.0}$ & $0.31^{+0.13}_{-0.13}$ \\ 
+HD 86728 b & HD 86728 b & $0.0311^{+0.0052}_{-0.0053}$ & $0.2004^{+0.0042}_{-0.0044}$ & $31.142^{+0.016}_{-0.017}$ & $0.2^{+0.18}_{-0.13}$ \\ 
+HD 95735 b & HD 95735 b & $0.078^{+0.012}_{-0.011}$ & $3.39^{+0.16}_{-0.12}$ & $.0^{+.0}_{-.0}$ & $0.18^{+0.14}_{-0.12}$ \\ 
+HD 97101 b & HD 97101 b & $0.184^{+0.013}_{-0.012}$ & $1.404^{+0.018}_{-0.018}$ & $742.4^{+3.7}_{-3.3}$ & $0.088^{+0.066}_{-0.058}$ \\ 
+HD 97101 c & HD 97101 c & $0.0308^{+0.0044}_{-0.0042}$ & $0.2373^{+0.0029}_{-0.0029}$ & $51.598^{+0.039}_{-0.042}$ & $0.24^{+0.15}_{-0.14}$ \\ 
+HIP 109388 c & HIP 109388 c & $1.275^{+0.067}_{-0.067}$ & $5.383^{+0.10}_{-0.096}$ & $.0^{+.0}_{-.0}$ & $0.101^{+0.044}_{-0.043}$ \\ 
 \bottomrule 
 \end{longtable*} 
