--- a/Notebook_Statistics.ipynb
+++ b/Notebook_Statistics.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -90,27 +90,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "name               75732b\n",
-       "mass_c           0.300358\n",
-       "mass_err_c      0.0598671\n",
-       "iso_parallax           -1\n",
+       "name                38529\n",
+       "mass_c            1.52929\n",
+       "mass_err_c      0.0121477\n",
+       "iso_parallax    0.0235819\n",
        "kmag                  NaN\n",
-       "Name: 609, dtype: object"
+       "Name: 388, dtype: object"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "specmatch.loc[388][['name', 'mass_c', 'mass_err_c', 'iso_parallax', 'kmag']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>mass_c</th>\n",
+       "      <th>mass_err_c</th>\n",
+       "      <th>iso_mass</th>\n",
+       "      <th>iso_mass_err2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>661</th>\n",
+       "      <td>gl876</td>\n",
+       "      <td>0.369607</td>\n",
+       "      <td>0.009251</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      name    mass_c  mass_err_c  iso_mass  iso_mass_err2\n",
+       "661  gl876  0.369607    0.009251       0.0            0.0"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "specmatch.query('name == \"gl876\"')[['name', 'mass_c', 'mass_err_c', 'iso_mass', 'iso_mass_err2']]"
    ]
   },
   {
