--- a/legacy_tables/Stellar_legacy_selection.ipynb
+++ b/legacy_tables/Stellar_legacy_selection.ipynb
@@ -1633,10 +1633,12 @@
     "legacy_syn['method'] = 'syn'\n",
     "legacy_emp['method'] = 'emp'\n",
     "\n",
-    "legacy_syn['teff_c'] = legacy_syn['teff']\n",
-    "legacy_emp['teff_c'] = legacy_emp['teff_emp']\n",
-    "legacy_syn['teff_err_c'] = legacy_syn['teff_err']\n",
-    "legacy_emp['teff_err_c'] = legacy_emp['teff_err_emp']\n",
+    "legacy_syn['teff_c'] = legacy_syn['iso_teff']\n",
+    "legacy_emp['teff_c'] = legacy_emp['iso_teff_emp']\n",
+    "legacy_syn['teff_err_c'] = 0.5*(legacy_syn['iso_teff_err1'] - legacy_syn['iso_teff_err2'])\n",
+    "legacy_emp['teff_err_c'] = 0.5*(legacy_emp['iso_teff_err1_emp'] - legacy_emp['iso_teff_err2_emp'])\n",
+    "#legacy_syn['teff_err_c'] = legacy_syn['teff_err']\n",
+    "#legacy_emp['teff_err_c'] = legacy_emp['teff_err_emp']\n",
     "\n",
     "legacy_syn['fe_c'] = legacy_syn['iso_fe']\n",
     "legacy_emp['fe_c'] = legacy_emp['iso_fe_emp']\n",
@@ -1738,10 +1740,10 @@
     "legacy_choice = legacy_syn.append(legacy_emp).reset_index()\n",
     "\n",
     "#Institute temporary fixes for 201092, hip16404, 153557.\n",
-    "legacy_choice.loc[legacy_choice.name == '201092', 'mass_c'] = 0.64\n",
-    "legacy_choice.loc[legacy_choice.name == '201092', 'mass_err_c'] = 0.02\n",
-    "legacy_choice.loc[legacy_choice.name == '201092', 'logg_c'] = 4.65\n",
-    "legacy_choice.loc[legacy_choice.name == '201092', 'logg_err_c'] = 0.1\n",
+    "#legacy_choice.loc[legacy_choice.name == '201092', 'mass_c'] = 0.64\n",
+    "#legacy_choice.loc[legacy_choice.name == '201092', 'mass_err_c'] = 0.02\n",
+    "#legacy_choice.loc[legacy_choice.name == '201092', 'logg_c'] = 4.65\n",
+    "#legacy_choice.loc[legacy_choice.name == '201092', 'logg_err_c'] = 0.1\n",
     "\n",
     "legacy_choice.loc[legacy_choice.name == 'hip16404', 'logg_c'] = 4.75\n",
     "legacy_choice.loc[legacy_choice.name == 'hip16404', 'logg_err_c'] = 0.1\n",
